# RusticRaven

./: .gitattributes  .gitignore  Cargo.toml  PKGBUILD  README.md  raven.toml  rustfmt.toml  snapcraft.yaml  style.css  template.html
.github/workflows/: rust.yml
benches/: benchmark.rs
docs/: index.html
src/: build.rs  config.rs  defaults.rs  error.rs  index.md  lib.rs  main.rs
syntax-themes/: gruvbox.tmTheme
