[package]
name = "rustic_raven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gh-emoji = "1.0.7"
pulldown-cmark = { version = "0.9.2", features = ["simd", "serde"] }
serde = { version = "1.0.156", features = ["derive"] }
structopt = "0.3.26"
syntect = "5.0.0"
thiserror = "1.0.39"
toml = "0.7.3"
walkdir = "2.3.2"
